argocd/overlays/default/patch-dex-server-resources.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-dex-server
  namespace: argocd
spec:
  template:
    spec:
      containers:
        - name: dex
          resources:
            requests:
              ephemeral-storage: "100Mi"
            limits:
              ephemeral-storage: "200Mi"
