argocd/overlays/default/patch-repo-server-resources.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-repo-server
  namespace: argocd
spec:
  template:
    spec:
      containers:
        - name: argocd-repo-server
          resources:
            requests:
              ephemeral-storage: "500Mi"
            limits:
              ephemeral-storage: "1Gi"
